User entity added