@@ -4,30 +4,26 @@ import com.metaverse.tihcl.common.response.TihclResponse;
 import com.metaverse.tihcl.exceptions.DataException;
 import com.metaverse.tihcl.model.CreditFacilityDetails;
 import com.metaverse.tihcl.model.Registration;
-import com.metaverse.tihcl.registration.repository.CreditFacilityDetailsRepository;
 import com.metaverse.tihcl.registration.repository.RegistrationRepository;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class RegistrationServiceAdepter implements RegistrationService {
-    @Autowired
-    RegistrationRepository registrationRepository;
-    @Autowired
-    CreditFacilityDetailsRepository creditFacilityDetailsRepository;
+
+    private final RegistrationRepository registrationRepository;
 
     @Override
-    @Transactional
     public TihclResponse saveRegistration(RegistrationRequest request) throws DataException {
         Registration registration;
         if (request.getRegistrationId() == null) {
          if(registrationRepository.findByContactNumber(request.getContactNumber()) != null)
-         return TihclResponse.builder().message(request.getContactNumber() + " This Number is already exists").status(400).build();
-            registration = RegistrationRequestMapper.mapRegistration(request);
+                return TihclResponse.builder().message(request.getContactNumber() + " This Number is already exists").status(400).build();
+         registration = RegistrationRequestMapper.mapRegistration(request);
         } else {
             registration = registrationRepository.findById(request.getRegistrationId())
                     .orElseThrow(() -> new DataException(
@@ -41,7 +37,7 @@ public class RegistrationServiceAdepter implements RegistrationService {
         if (Boolean.TRUE.equals(request.getExistingCredit()) && request.getCreditFacilityDetails() != null) {
             List<CreditFacilityDetails> creditDetailsList = request.getCreditFacilityDetails().stream()
                     .map(RegistrationRequestMapper::mapCreditFacilityDetails)
-                    .collect(Collectors.toList());
+                    .toList();
             creditDetailsList.forEach(detail -> detail.setRegistration(registration));
 
             registration.getCreditFacilityDetails().clear();
@@ -70,7 +66,7 @@ public class RegistrationServiceAdepter implements RegistrationService {
     }
 
     @Override
-    public TihclResponse getAllRegistrations() throws DataException {
+    public TihclResponse getAllRegistrations() {
         List<Registration> registrationList = registrationRepository.findAll();
         if (registrationList.isEmpty())
             return TihclResponse.builder().message("No registrations found in the system.").status(400).build();
